Bug 239079 - New event displayed in agenda view while resource unchecked
Summary: New event displayed in agenda view while resource unchecked
Status: VERIFIED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-28 01:53 UTC by Sabine Faure
Modified: 2010-07-01 20:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-05-28 01:53:04 UTC
Version:           unspecified (using Devel) 
OS:                Linux

A newly created event is displayed in agenda view whether its calendar is checked or not whereas in month view it only is displayed if the calendar is checked.

Two different behaviours for the same action does not seem logical

Reproducible: Always

Steps to Reproduce:
- Launch KOrg
- Uncheck a resource (iCal file or Kolab calendar)
- Go to agenda view
- Click on 'New Event' button
- Create a new event for today starting from 8:00 to 10:00 and using the unchecked calendar
- Click on 'Ok'


Actual Results:  

The new event is displayed eventhough its calendar is not checked.

However, it is impossible to display its information in the details view until its calendar box is rechecked.

Expected Results:  
The event should not be displayed at all like it is the case in the month view if an event is created while its calendar is unchecked.

Trunk, Svn Rev 1131264
Comment 1 Thomas McGuire 2010-05-28 02:57:03 UTC
That is an KOrganizer bug, so reassigning.
Comment 2 Sergio Martins 2010-06-07 17:29:51 UTC
SVN commit 1135556 by smartins:

When no calendar is selected "new incidence" actions are disabled, but the user still could double click the views, or 
use typeAhead

BUG: 239079


 M  +2 -0      actionmanager.cpp  
 M  +54 -6     calendarview.cpp  
 M  +10 -0     calendarview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1135556
Comment 3 Sabine Faure 2010-06-25 23:30:59 UTC
It is corrected now.

If the calendar is unchecked (Ical, I have to set up a kolab calendar and retest this) the event won't be displayed in both agenda and month view. To display it the user need to check the corresponding calendar.

Trunk, Svn Rev 1142760
Comment 4 Sabine Faure 2010-07-01 20:18:58 UTC
I retested this today using a Kolab calendar and it works fine too.

Trunk, Svn Rev 1142760