When no calendar is selected "new incidence" actions are disabled, but the user still could double click the views, or use typeAhead

BUG: 239079

svn path=/trunk/KDE/kdepim/; revision=1135556